Apply absolute and flex positioning to footer elements to improve wrapping issue 004

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,32 +220,34 @@ img {
 }
 
 /* Footer styling, updated 16/04/23 DMcC to include overflow, margins and padding */
+/* 17/04/23 DMcC:  reinstated named grid-area and relative positioning */
 .footer {
-    grid-area: 3 / 1/ 3/ 4;
+    grid-area: foot;
+    position: relative;
     min-height: 75px;
     margin: 0;
-    overflow: auto;
     padding: 0;
     background-color: rgb(96, 239, 191);
+    display:flex;
+    align-content: stretch;
     }
 
+    /* 17/04/23 DMcC:  Add absolute positioning and flex display */
 .partners {
-    /*grid-area: foot;
-    margin: auto; */ 
-    clear:left;
-        text-align: center;
-    clear: all;
+    position: absolute;
+    display:flex;
+    align-content:stretch;
     align-self: center;
 }
 
 .partners>li {
     display: inline;
+    padding-left:30%;
 }
 
 .partners i {
     font-size: 160%;
-    padding: 5%;
-    margin: auto;
+    padding: 10%;
     color: #3a3a3a;
     /* overflow: auto; */
 }
